# q2-amrfinderplus

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml  ci.yml
ci/recipe/: meta.yaml
conda-recipe/: meta.yaml
environment-files/: q2-amrfinderplus-qiime2-pathogenome-2026.4.yml  q2-amrfinderplus-qiime2-tiny-2026.4.yml  q2-amrfinderplus-rachis-pathogenome-2026.4.yml
environments/: q2-amrfinderplus-qiime2-pathogenome-2024.10.yml  q2-amrfinderplus-qiime2-tiny-2024.10.yml
q2_amrfinderplus/: __init__.py  _version.py  annotate.py  citations.bib  database.py  feature_table.py  plugin_setup.py  sample_data.py  utils.py
q2_amrfinderplus/tests/: test_annotate.py  test_database.py  test_feature_table.py  test_integration.py  test_integration_amrfinder.py  test_methods.py  test_sample_data.py  test_utils.py
q2_amrfinderplus/tests/data/annotations_contigs_1/: sample1_amr_annotations.tsv  sample2_amr_annotations.tsv
q2_amrfinderplus/tests/data/annotations_contigs_new_header/: sample1_amr_annotations.tsv  sample2_amr_annotations.tsv
q2_amrfinderplus/tests/data/minimal_contigs/: sample1_contigs.fasta
q2_amrfinderplus/tests/data/minimal_database/: AMR.LIB  AMR.LIB.h3f  AMR.LIB.h3i  AMR.LIB.h3m  AMR.LIB.h3p  AMRProt-mutation.tsv  AMRProt-susceptible.fa  AMRProt-susceptible.tsv  AMRProt.fa  AMRProt.fa.phr  AMRProt.fa.pin  AMRProt.fa.pjs  fam.tsv  (+15 more)
q2_amrfinderplus/types/: __init__.py  _format.py  _transformer.py  _type.py
q2_amrfinderplus/types/tests/: test_types_formats_transformers.py
(+22 files in other folders)
